# NativeKeyStore

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/nativ/ks/: ExampleInstrumentedTest.java  Shared.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: filecert.pfx
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/openssl/include/openssl/: opensslconf.h
app/src/main/java/nativ/ks/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/nativ/ks/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
log/: logcat.md
